changes on devel branch

--- a/README
+++ b/README
@@ -30,7 +30,7 @@ README is complete. Use it at your own risk, and if you want, join us :)
 3.1.3 Ftp
 
 4. GETTING HELP
-4.1 Troubleshooting
+4.1 Troubleshooting  DO THIS!
 4.2 Known issues
 
 -------------------------------------------------------------------------------
