--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 - DONE! replace ufe-checker with ufe-add
+- DONE! create ufe-recycle with parameters, to the 3 recycling
+  script we have
 - create ufe-check (use vhash as parameter to check status)
 - check encode errors and do something
 - replace ufe-ftp with ufe-upload, with option to use ftp or
   move to folder
+- what to do if uploaded file is not a video? (has insufficient
+  metadata)
